# SCC0230-IA-algs-de-busca-em-labirintos

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CSVs/: aStarResults.csv  bestFirstResults.csv  bfsResults.csv  dfsResults.csv  plotData.py
GIFs/: frames2gif.py
images/: ppm2png.py
images/ppmFiles/: aStarCave.ppm  aStarCaveSolution.ppm  aStarMaze.ppm  aStarMazeSolution.ppm  bestFirstCave.ppm  bestFirstCaveSolution.ppm  bestFirstMaze.ppm  bestFirstMazeSolution.ppm  bfsCave.ppm  bfsCaveSolution.ppm  bfsMaze.ppm  bfsMazeSolution.ppm  dfsCave.ppm  dfsCaveSolution.ppm  dfsMaze.ppm  dfsMazeSolution.ppm  unsolvedCave.ppm  unsolvedMaze.ppm
main/: main  main.cpp
src/: CMakeLists.txt
src/grid/: canvas.hpp  cave.hpp  grid.hpp  maze.hpp  solvers.hpp
src/maze/: maze.hpp
src/paths/: cave.hpp  maze.hpp  paths.hpp  solvers.hpp
src/utils/: createCSV.hpp  perftest.hpp  printtemplates.hpp
test/: testBenchmark.cpp  testMazeGeneration.cpp  testPrinttemplates.cpp
